test/Fail/Issue6244.err
Issue6244.agda:4,1-44: error: [SafeFlagPragma]
Cannot set OPTIONS pragma --no-load-primitives with safe flag.
